--- a/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
+++ b/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -82,7 +82,9 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ImageHelper.cs" />
     <Compile Include="Services\QRScanningService.cs" />
+    <Compile Include="Services\ScannerView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -123,8 +125,10 @@
     </AndroidResource>
     <AndroidResource Include="..\VaccinbevisVerifiering\Resources\Vaccinationsregler.json">
       <Link>Resources\raw\Vaccinationsregler.json</Link>
-      <SubType></SubType>
-      <Generator></Generator>
+      <SubType>
+      </SubType>
+      <Generator>
+      </Generator>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
@@ -178,8 +182,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\flash_off.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\raw\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
