--- a/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
+++ b/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
@@ -182,6 +182,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\flash_off.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\avbryt.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
