Add code for selecting optimal camera resolution

--- a/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
+++ b/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
@@ -82,6 +82,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CameraResolutionSelector.cs" />
     <Compile Include="Services\ImageHelper.cs" />
     <Compile Include="Services\QRScanningService.cs" />
     <Compile Include="Services\ScannerView.cs" />
