added support for rules with max days from last dose

--- a/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
+++ b/VaccinbevisVerifiering.Android/VaccinbevisVerifiering.Android.csproj
@@ -104,8 +104,8 @@
       <Generator>
       </Generator>
     </AndroidResource>
-    <AndroidResource Include="..\VaccinbevisVerifiering\Resources\Vaccinationsregler.json">
-      <Link>Resources\raw\Vaccinationsregler.json</Link>
+    <AndroidResource Include="..\VaccinbevisVerifiering\Resources\vaccinbevisverifiera.json">
+      <Link>Resources\raw\vaccinbevisverifiera.json</Link>
       <SubType>
       </SubType>
       <Generator>
